--- a/src/index.css
+++ b/src/index.css
@@ -33,22 +33,23 @@
 
 .nav-link {
   list-style: none;
+  text-decoration: none;
   position: relative;
   font-weight: 600;
-  color: #333;
+  color: rgb(206, 194, 194);
   transition: color 0.3s ease-in-out;
   cursor: pointer;
 }
 
 .nav-link:hover {
-  color: #3b82f6; /* Blue hover */
+  color: white; /* Blue hover */
 }
 
 .nav-link::after {
   content: "";
   width: 0;
   height: 3px;
-  background: #3b82f6;
+  background: gray;
   position: absolute;
   bottom: -3px;
   left: 50%;
@@ -101,3 +102,15 @@
     padding: 8px 12px;
   }
 }
+
+.aurora-container {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+    background-color: black;
+}
+
+
+
